--- a/shipping.html
+++ b/shipping.html
@@ -66,7 +66,7 @@
         </section>
         <section class="cards">
             <div class="container">
-                <h2>Доставка</h2>
+                <h2>Оплата</h2>
                 <div class="icons__wrapper cards">
                     <div class="icons__item card">
                         <img src="img/icons/card.svg" alt="">
