--- a/shipping.html
+++ b/shipping.html
@@ -95,6 +95,18 @@
                 </div>
             </div>
         </section>
+        <section class="feedback">
+            <div class="container">
+                <h2>Остались вопросы?</h2>
+                <form action="" class="feedback__form">
+                    <h4>Напишите нам!</h4>
+                    <input placeholder="Имя*" type="text">
+                    <input placeholder="Почта*" type="email" name="" id="">
+                    <textarea placeholder="Сообщение*" name="" id=""></textarea>
+                    <div class="button">Отправить</div>
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
